--- a/static/index.html
+++ b/static/index.html
@@ -1,64 +1,68 @@
 <!doctype html>
 
-<!-- Copied and adapted from Bootstrap homepage. -->
-
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, from index.html!</h1>
-    <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            <input class="form-control" id="output" type="text" placeholder="Random number here.." readonly>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm">
-            <button type="button" class="btn btn-success" id="uniform-button">Uniform</button>
-          </div>
-          <div class="col-sm">
-            <button type="button" class="btn btn-primary" id="normal-button">Normal</button>
-          </div>
-        </div>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="shortcut icon" href="#" />
+
+  <title>API</title>
+</head>
+
+<body>
+
+  <h1>Wind Turbine API</h1>
+
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm">
+        <input class="form-control" id="input" type="text" placeholder="Enter Wind Speed...">
       </div>
+    </div>
 
-    <!-- Optional JavaScript; choose one of the two! -->
+    <div class="row">
+      <div class="col-sm">
+        <button type="button" class="btn btn-success" id="submit-button">Submit</button>
+      </div>
+    </div>
 
-    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-    <!-- Changed from slim to full jQuery. -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+    <div class="row">
+      <div class="col-sm">
+        <input class="form-control" id="output" type="text" placeholder="Power Generated..." readonly>
+      </div>
+    </div>
 
-    <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-    -->
+  </div>
 
+  <!-- jQuery and Bootstrap Bundle (includes Popper) -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
 
-    <script>
-        // Adapted from stack overflow posts.
-        $("#normal-button").click(function(e) {
-            e.preventDefault();
-            $.getJSON("/api/normal", function(data) {
-                $('#output').val(data.value);
-            });
-        });
-        $("#uniform-button").click(function(e) {
-            e.preventDefault();
-            $.getJSON("/api/uniform", function(data) {
-                $('#output').val(data.value);
-            });
-        });
-    </script>
-  </body>
+  <script>
+    // onClick submit button
+    $("#submit-button").click(function (e) {
+      e.preventDefault();
+      // get speed from input id
+      var speed = $('#input').val();
+      // api call 
+      $.post("/api", { "speed": speed }, function (data) {
+        console.log("Data Sent");
+        // print returned power to output id 
+        $('#output').val(data.value);
+      });
+
+    });
+  </script>
+</body>
+
 </html>
